# stronghold-crusader-llm

./: .gitignore  CrusaderAI.csproj  CrusaderAI.sln  GameState.cs  GameStateWriter.cs  Plugin.cs  README.md  SimpleJSON.cs
CrusaderAI/: CrusaderAI.csproj  GameState.cs  GameStateWriter.cs  Plugin.cs  SimpleJSON.cs  main.py  pyproject.toml
CrusaderAI/sdk/: loop.py  state.py  ui.py
sdk/: loop.py  state.py  ui.py
