[project]
name = "crusader_sdk"
version = "0.1.0"
description = "A python-based modkit for Stronghold Crusader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.1.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "streamlit>=1.47.0",
]
